# SpaceZ

./: .gitignore  CMakeLists.txt
cmake/: FindAllegro.cmake
src/: Galaxy.cpp  Galaxy.h  Ship.cpp  Ship.h  main.cpp
